--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,7 @@
-
 [project]
 name = "electron-all-in-one"
 version = "0.1.0"
-description = ""
+description = "一个通过将磁盘上所有 Electron 应用中相同文件硬链接到统一位置来减少磁盘占用的解决方案，就像 pnpm 一样。"
 authors = [
     {name = "Wankko Ree", email = "wkr@wkr.moe"},
 ]
@@ -13,8 +12,11 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-license = {text = "MIT"}
+license = {text = "GPLv3"}
 
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[project.scripts]
+eaio = "eaio.__main__:main"
