--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pefile>=2023.2.7",
     "loguru>=0.7.0",
     "requests>=2.30.0",
+    "pysocks>=1.7.1",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
