--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "loguru>=0.7.0",
     "requests>=2.30.0",
     "pysocks>=1.7.1",
+    "pylnk3>=0.4.2",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
